# allegro5_game

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  Dockerfile.base  Dockerfile.win32  LICENSE.txt  README.md  build-win32.sh  build.sh  io.github.royeldar.game.yml  meson.build
misc/: AppRun  game.desktop
scripts/: build.sh  install.sh  run.sh  setup.sh  uninstall.sh
scripts/debug/: build.sh  install.sh  run.sh  uninstall.sh
scripts/win32/: build.sh  setup.sh
src/: config.c  config.h  events.c  events.h  flatpak.c  flatpak.h  fullscreen.c  fullscreen.h  game.c  game.h  gfx.c  gfx.h  hashmap.c  hashmap.h  keyboard.c  keyboard.h  main.c  meson.build  render.c  render.h  resources.c  resources.h  sfx.c  sfx.h  shared_state.c  shared_state.h  synchronization.c  synchronization.h  triple_buffer.c  triple_buffer.h
src/misc/: game.desktop
win32/: build.sh
